--- a/style/style.sass
+++ b/style/style.sass
@@ -6,6 +6,7 @@ body
     align-items: center
     justify-content: center
     height: 100vh
+    overflow: hidden
     
     
 *,
@@ -30,11 +31,18 @@ h1, h2, h3, h4, h5, h6, p
         font-family: sans-serif
         transition: .4s ease
         position: relative
+        -webkit-background-clip: text
+        -webkit-text-fill-color: transparent
+        background-image: url(https://media.giphy.com/media/TyQY0zTXX4x0c/giphy.gif)
+        background-position: center 
         &:before
             content: ''
             width: 50%
             height: 3px
-            background-color: #fff
+            background-image: url(https://media.giphy.com/media/TyQY0zTXX4x0c/giphy.gif)
+            background-position: center
+            background-repeat: no-repeat
+            background-size: cover
             position: absolute
             top: 50%
             left: -100%
@@ -44,12 +52,15 @@ h1, h2, h3, h4, h5, h6, p
             content: ''
             width: 50%
             height: 3px
-            background-color: #fff
+            background-image: url(https://media.giphy.com/media/TyQY0zTXX4x0c/giphy.gif)
+            background-position: center
             position: absolute
             top: 50%
             right: -100%
             transform: translateY(-50%)
             transition: .4s ease
+            background-repeat: no-repeat
+            background-size: cover
         &:hover
             background-color: rgba(80, 56, 0, 0.35)
             &:before
